--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -3,17 +3,7 @@
     "title": "Aiprac",
 		"desc": "AI-driven personalized practice platform"
   },
-	"nav": {
-		"home": "Home",
-		"about": "About Us",
-		"help": "Help center"
-	},
-	"header": {
-		"gohome": "go home"
-	},
-	"theme": {
-		"light": "light",
-		"dark": "dark",
-		"system": "system"
+	"login": {
+		"login": "Login"
 	}
 }
