--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -3,17 +3,7 @@
     "title": "爱练习",
 		"desc": "AI驱动的个性化中文练习平台"
   },
-	"nav": {
-		"home": "首页",
-		"about": "关于我们",
-		"help": "帮助中心"
-	},
-	"header": {
-		"gohome": "回到首页"
-	},
-	"theme": {
-		"light": "亮色",
-		"dark": "暗色",
-		"system": "系统"
+	"login": {
+		"login": "登录"
 	}
 }
